# DealerCenter

./: CMakeLists.txt  README.md  administratorwidget.cpp  appmenu.cpp  coreservice.cpp  coreservice.h  customerwidget.cpp  customerwidget.h  iinputdialogbase.h  iinputvalidator.cpp  iinputvalidator.h  ilocaldbservicebase.h  inputcardialog.cpp  inputcardialog.h  inputnumberdialog.cpp  inputuserdialog.cpp  inputuserdialog.h  inputvalidatorfactory.cpp  inputvalidatorfactory.h  localbbstorage.h  main.cpp  mainwidget.cpp  mainwidget.h  resources.qrc  servicelocator.cpp  transportdata.h  transportdbprovider.cpp  transportdbservice.cpp  transportdbservice.h  userdatamodel.cpp  userdatamodel.h  userdbprovider.cpp  userdbprovider.h  userdbservice.cpp  userdbservice.h
Common/: manufacturerdata.h  purchasedata.h  transportdata.h  userdata.h
Models/: manufacturersmodel.cpp  manufacturersmodel.h  purchasesmodel.cpp  purchasesmodel.h  transportsmodel.cpp  transportsmodel.h
Other/: help.html
Providers/: iprovider.h  localbbstorage.h  localdbproviderbase.cpp  localdbproviderbase.h  manufacturerdbprovider.cpp  manufacturerdbprovider.h  purchasedbprovider.cpp  purchasedbprovider.h  transportdbprovider.cpp  transportdbprovider.h  userdbprovider.cpp  userdbprovider.h
Services/: coreservice.h  ilocaldbservicebase.cpp  ilocaldbservicebase.h  iservice.h  manufacturerdbservice.cpp  manufacturerdbservice.h  purchasesdbservice.cpp  purchasesdbservice.h  servicelocator.h  transportdbservice.cpp  transportdbservice.h  userdbservice.cpp  userdbservice.h
Widgets/: administratorwidget.cpp  administratorwidget.h  appmenu.cpp  appmenu.h  customerstablewidget.cpp  customerstablewidget.h  customerwidget.cpp  customerwidget.h  iinputdialogbase.cpp  iinputdialogbase.h  inputcardialog.h  inputmanufacturerdialog.cpp  inputmanufacturerdialog.h  inputnumberdialog.h  inputuserdialog.cpp  inputuserdialog.h  logindialog.h  mainwidget.cpp  mainwidget.h  managerstablewidget.cpp  managerstablewidget.h  managerswidget.cpp  managerswidget.h  manufacturerstablewidget.cpp  manufacturerstablewidget.h  purchasestablewidget.cpp  purchasestablewidget.h  purchasewidget.cpp  purchasewidget.h  transporttablewidget.cpp  transporttablewidget.h
Widgets/Dialogs/: iinputdialogbase.cpp  iinputdialogbase.h  inputmanufacturerdialog.cpp  inputmanufacturerdialog.h  inputuserdialog.cpp  inputuserdialog.h  inputvalidatorfactory.cpp  inputvalidatorfactory.h  logindialog.cpp  validators.cpp  validators.h
